Changelog
=========

5.9-dev0 - (unreleased)
---------------------

5.8 - (2019-01-28)
---------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

5.7 - (2018-08-17)
---------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]
* Bug fix: fixed templates display title for Folder
  [alecghica refs #97573]

5.6 - (2018-06-04)
---------------------
* Feature: merged fixes from custom
  [alecghica refs #95891]
* Change: fixed jslint warnings
  [alecghica refs #95891]

5.5 - (2018-04-12)
-----------------------
* Bug fix: avoid gallery photo hiding when clicking on gallery thumbnail
  [ichim-david refs #94172]

5.4 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

5.3 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

5.2 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

5.1 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [ichim-david refs #71940]

5.0 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

4.9 - (2012-11-22)
------------------
* Feature: turned the galleryView customization into a jquery plugin so it can
  be called at any time
  [ichimdav #5463]

4.8 - (2012-08-27)
------------------
* Bug fix: reference jquery.js in a way that is compatible also with Plone 4.2
  [ichimdav #5398]

4.7 - (2012-07-13)
------------------
* Bug fix: removed usage of is_empty
  [demarant refs #5289, fixes #5311]

4.6 - (2012-06-20)
------------------
* Bug Fix: Fixed i18n missing tags in eea.signals
  [prospchr refs #5162]
* Bug fix: removed usage of is_empty
  [tiberich refs #5289]

4.5 - (2012-06-12)